--- a/init.rk3588.rc
+++ b/init.rk3588.rc
@@ -2,7 +2,21 @@ on property:sys.boot_completed=1
     chown system system /sys/class/devfreq/fb000000.gpu/governor
     chown system system /sys/class/devfreq/fb000000.gpu/min_freq
     chown system system /sys/class/devfreq/fb000000.gpu/max_freq
+
     write /sys/devices/system/cpu/cpufreq/policy0/interactive/target_loads 65
+    write /sys/devices/system/cpu/cpufreq/policy4/interactive/target_loads 65
+    write /sys/devices/system/cpu/cpufreq/policy6/interactive/target_loads 65
+
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 0
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 0
+    write /sys/devices/system/cpu/cpu6/cpufreq/scaling_min_freq 0
+
+    write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedutil
+    write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedutil
+    write /sys/devices/system/cpu/cpufreq/policy6/scaling_governor schedutil
+
+    write /sys/class/devfreq/dmc/governor dmc_ondemand
+    
 
 on boot
     chown system system /sys/class/thermal/thermal_zone0/policy
@@ -28,3 +42,9 @@ on init
 
     chown system system /sys/class/devfreq/dmc/system_status
     chmod 0666 /sys/class/devfreq/dmc/system_status
+
+on early-init
+    write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor performance
+    write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor performance
+    write /sys/devices/system/cpu/cpufreq/policy6/scaling_governor performance
+    write /sys/class/devfreq/dmc/governor performance
