permission: chown system for otg_mode.
Signed-off-by: wengtao <tao.weng@rock-chips.com>
Change-Id: I9d256cb1d766649cff0a365f5e5bb1e2fae4ad95

--- a/init.rk3588.rc
+++ b/init.rk3588.rc
@@ -35,6 +35,9 @@ on boot
     # reduce schedul time to improve io performance
     write /sys/kernel/debug/sched_features NO_ENERGY_AWARE
 
+    chown system system /sys/devices/platform/fd5d0000.syscon/fd5d0000.syscon:usb2-phy@0/otg_mode
+    chmod 0660 /sys/devices/platform/fd5d0000.syscon/fd5d0000.syscon:usb2-phy@0/otg_mode
+
 on init
     # Increased power consumption and CPU in exchange for memory
     write /proc/sys/vm/swappiness 100
