set proc/sys/kernel/sched_util_clamp_min_rt_default = 0
The initial load of RT process, set the range of 0-1024, set the RT task
above 300 will preferentially run on the cpuB(cpu4-cpu7)

Change-Id: If1933638b05733ac183cd49ed46cffb6f46d5fcf

--- a/init.rk3588.rc
+++ b/init.rk3588.rc
@@ -37,6 +37,11 @@ on boot
 
     chown system system /sys/devices/platform/fd5d0000.syscon/fd5d0000.syscon:usb2-phy@0/otg_mode
     chmod 0660 /sys/devices/platform/fd5d0000.syscon/fd5d0000.syscon:usb2-phy@0/otg_mode
+    
+    # The initial load of RT process, set the range of 0-1024, set the RT task above 300 will 
+    # preferentially run on the cpuB(cpu4-cpu7)
+    write /proc/sys/kernel/sched_util_clamp_min_rt_default 0
+
 
 on init
     # Increased power consumption and CPU in exchange for memory
