set property vendor.hwc.env_xml_path for rk3588m device
Signed-off-by: Luo Wei <lw@rock-chips.com>
Change-Id: I6c21a792c1a83cff9a7e9ad48b8d3588eeb61a62

--- a/init.rk3588.rc
+++ b/init.rk3588.rc
@@ -21,6 +21,8 @@ on property:sys.boot_completed=1
 
     write /sys/class/devfreq/dmc/governor dmc_ondemand
 
+    write /dev/vehicle 88
+
 on charger
     chown system system /sys/class/devfreq/fb000000.gpu/governor
     chown system system /sys/class/devfreq/fb000000.gpu/min_freq
