Edge2: add preinstall support and add Aptoide.apk & Chrome.apk[1/2]
Change-Id: Idd05c39c17eb6b4679725c34343d2b72c7f97851
Signed-off-by: Goenjoy Huang <goenjoy@khadas.com>

--- a/init.rk3588.rc
+++ b/init.rk3588.rc
@@ -83,3 +83,12 @@ on early-init
     write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor performance
     write /sys/devices/system/cpu/cpufreq/policy6/scaling_governor performance
     write /sys/class/devfreq/dmc/governor performance
+
+service preinstall /system/bin/preinstall.sh
+    user root
+    group root
+    oneshot
+    seclabel u:r:preinstall:s0
+
+on property:sys.boot_completed=1
+    start preinstall
