--- a/rk3588m_car/init.car.rc
+++ b/rk3588m_car/init.car.rc
@@ -1,20 +1,16 @@
 #camera360
 on property:persist.sys.camera360=1
-   chmod 666 /dev/video0
-   chmod 666 /dev/video1
-   chmod 666 /dev/video2
-   chmod 666 /dev/video3
+    chmod 0666 /dev/video*
 
 on property:persist.sys.camera360=2
-   chmod 660 /dev/video0
-   chmod 660 /dev/video1
-   chmod 660 /dev/video2
-   chmod 660 /dev/video3
+    chmod 0660 /dev/video*
 
 service camera360 /system/bin/camera360.sh
-     disabled
-     oneshot
+    disabled
+    oneshot
 
 on property:sys.boot_completed=1
-   start camera360
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/target_load 65
+    setprop vendor.hwc.reserved_plane_name NULL
+    start camera360
 
