--- a/init.rk3588.rc
+++ b/init.rk3588.rc
@@ -20,6 +20,9 @@ on property:sys.boot_completed=1
 
     write /dev/vehicle 88
 
+#add for ttyS2
+    chmod 777 /dev/ttyS2
+
 on charger
     chown system system /sys/class/devfreq/fb000000.gpu/governor
     chown system system /sys/class/devfreq/fb000000.gpu/min_freq
